--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,14 @@ orbs:
 jobs:
   build-and-test:
     executor: python/default
+    environment:
+      PYTHONPATH=./src
+    
     steps:
       - checkout
+      - python/load-cache
       - python/install-deps
+      - python/save-cache
       - python/test
 
 workflows:
